Deploys portfolio to subdirectory
Configures the Angular application to deploy to a subdirectory, `/mi-portafolio/`, and disables analytics.  Updates component selectors for improved consistency.

--- a/src/app/components/mi-portafolio/mi-portafolio.component.html
+++ b/src/app/components/mi-portafolio/mi-portafolio.component.html
@@ -1,6 +1,6 @@
-<nav-bar/>
+<app-nav />
 <p>mi-portafolio works!</p>
 <h1 class="text-3xl underline">
-    Hello world!
+  Hello world!
 </h1>
-<footer-app/>
+<app-footer />
